--- a/src/app/components/hoteles/hoteles.component.html
+++ b/src/app/components/hoteles/hoteles.component.html
@@ -85,7 +85,8 @@
                                         <div class="text-xs font-bold px-2 py-1">
                                             <div class="flex items-center">
                                                 <img class="w-6 h-6 mr-2" *ngIf="hotel?.descripcion?.concepto === 'Luxury'" src="assets/icons/luxury.svg" />
-                                                <img class="w-6 h-6 mr-2" *ngIf="hotel?.descripcion?.concepto === 'Solo Adultos'" src="assets/icons/luxury.svg" />
+                                                <img class="w-6 h-6 mr-2" *ngIf="hotel?.descripcion?.concepto === 'Solo Adultos'" src="assets/icons/solo adultos.png" />
+                                                <img class="w-6 h-6 mr-2" *ngIf="hotel?.descripcion?.concepto === 'Petfriendly'" src="assets/icons/petfriendly.svg" />
                                             </div>
                                         </div>
                                     </div>
