--- a/src/app/layout/layouts/horizontal/material/material.component.html
+++ b/src/app/layout/layouts/horizontal/material/material.component.html
@@ -9,7 +9,7 @@
     <ng-container fuseVerticalNavigationContentHeader>
         <!-- Logo -->
         <div class="flex h-20 items-center px-8 pt-6">
-            <img class="w-7 h-7 rounded-full hidden dark:block" src="assets/images/logos/trotapie.png" />
+            <img class="w-7 h-7 rounded-full hidden dark:block" src="assets/images/logos/trotapie-iso.png" />
         </div>
     </ng-container>
 </fuse-vertical-navigation>
@@ -21,7 +21,7 @@
             class="bg-card w-full max-w-360 overflow-hidden border-b sm:m-8 sm:mb-0 sm:rounded-t-xl sm:py-3 sm:shadow-2xl md:mx-8 md:mt-12 md:pb-3 md:pt-4">
             <div class="relative flex h-16 flex-0 flex-auto items-center px-4 md:px-6">
                 <!-- @if (!isScreenSmall) { -->
-                <img class="w-56 h-15" src="assets/images/logos/trotapie.jpg" alt="Logo Trotapie" />
+                <img class="w-56 h-15" src="assets/images/logos/trotapie.png" alt="Logo Trotapie" />
             </div>
             <!-- Bottom bar -->
         </div>
