Cambio de servidor

--- a/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
+++ b/src/app/components/hoteles/detalles-hotel/detalle-hotel.component.html
@@ -372,13 +372,21 @@
                             <span><b>+100 mil</b> hoteles</span>
                         </div>
                         <div class="flex items-center mb-4">
+                            <img class="w-8 h-8 mr-2" src="assets/icons/avion3.svg" />
+                            <span><b>Vuelos</b></span>
+                        </div>
+                        <div class="flex items-center mb-4">
                             <mat-icon svgIcon="heroicons_outline:banknotes" class="w-8 h-8 mr-2 text-black"></mat-icon>
                             <span><b>Todas</b> las formas de pago</span>
                         </div>
-                        <div class="flex items-center">
+                        <div class="flex items-center mb-4">
                             <mat-icon svgIcon="heroicons_outline:credit-card"
                                 class="w-8 h-8 mr-2 text-black"></mat-icon>
                             <span><b>Meses sin intereses</b></span>
+                        </div>
+                        <div class="flex items-center">
+                            <img class="w-8 h-8 mr-2" src="assets/icons/support.svg" />
+                            <span><b>Atención</b></span>
                         </div>
                     </div>
                 </div>
